Added logic for duration lessons

--- a/src/main/resources/templates/fragments/login_form.html
+++ b/src/main/resources/templates/fragments/login_form.html
@@ -9,11 +9,11 @@
     <div class="signup-page right-block">
         <div class="signup-header">
             <h3>Email и пароль</h3>
+            <p>Будут использоваться для входа в личный кабинет</p>
         </div>
         <div class="row">
             <label>Email
                 <span class="color-red">*</span>
-                <!--<p>Email будет использоваться для входа в личный кабинет.</p>-->
             </label>
             <input class="form-control margin-bottom-20" type="text" th:field="*{user.email}"
                    data-bind="value: email" maxlength="100"/>
