--- a/src/main/resources/templates/fragments/user_form.html
+++ b/src/main/resources/templates/fragments/user_form.html
@@ -61,7 +61,7 @@
             <input class="form-control margin-bottom-20" type="text" th:field="*{user.phoneNumber}"
                    data-bind="value: phoneNumber" maxlength="20"/>
         </div>
-        <div class="row">
+        <div class="row gender">
             <label>Пол
                 <span class="color-red">*</span>
             </label>
