--- a/src/main/resources/templates/client/new.html
+++ b/src/main/resources/templates/client/new.html
@@ -30,7 +30,7 @@
 
                 <form data-bind="submit: save" th:object="${client}" th:action="@{/clients}" method="POST">
                     <div class="col-md-12 margin-bottom-20">
-                        <h3>Для того чтобы начать занятия с репетитором необходимо сначала зарегистрироваться.</h3>
+                        <h3>Перед началом занятий с репетитором необходимо зарегистрироваться</h3>
                     </div>
                     <div class="col-md-6">
                         <div th:replace="fragments/user_form :: user_form"></div>
